RESOLVED FIXED186477
Test js/regexp-zero-length-alternatives.html fails when RegExpJIT is disabled
https://bugs.webkit.org/show_bug.cgi?id=186477
Summary Test js/regexp-zero-length-alternatives.html fails when RegExpJIT is disabled
Michael Saboff
Reported 2018-06-10 22:30:16 PDT
A couple of subtests of subtests of js/regexp-zero-length-alternatives.html fail when using the YARR interpreter. These subtests all involve the RegExp: /(?:a*?|b*?)*/. var re32 = new RegExp(/(?:a*?|b*?)*/); "aaaa".match(re32); // Hangs, should return "aaaa" "abab".match(re32); // Hangs, should return "abab" "ab".match(re32); // Returns "", should return "ab" "xabx".match(re32); // Hangs, should return "ab"
Attachments
Patch (7.61 KB, patch)
2018-06-11 08:01 PDT, Michael Saboff
no flags
Radar WebKit Bug Importer
Comment 1 2018-06-10 22:30:49 PDT
Michael Saboff
Comment 2 2018-06-11 08:01:00 PDT
WebKit Commit Bot
Comment 3 2018-06-11 09:32:27 PDT
Comment on attachment 342429 [details] Patch Clearing flags on attachment: 342429 Committed r232718: <https://trac.webkit.org/changeset/232718>
WebKit Commit Bot
Comment 4 2018-06-11 09:32:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.