Test js/regexp-zero-length-alternatives.html fails when RegExpJIT is disabled https://bugs.webkit.org/show_bug.cgi?id=186477

Reviewed by Filip Pizlo.

Fixed bug where we were using the wrong frame size for TypeParenthesesSubpatternTerminalBegin
YARR interpreter nodes.  This caused us to overwrite other frame information.

Added frame offset debugging code to YARR interpreter.

* yarr/YarrInterpreter.cpp:
(JSC::Yarr::ByteCompiler::emitDisjunction):
(JSC::Yarr::ByteCompiler::dumpDisjunction):


Canonical link: https://commits.webkit.org/201850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232718 268f45cc-cd09-0410-ab3c-d52691b4dbfc